--- a/template-1/package.json
+++ b/template-1/package.json
@@ -17,7 +17,8 @@
     "ts-loader": "^9.4.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13",
